[gd_scene load_steps=67 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-run-05.png" type="Texture" id=2]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-idle-00.png" type="Texture" id=3]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-run-04.png" type="Texture" id=4]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-idle-02.png" type="Texture" id=5]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-air-attack1-02.png" type="Texture" id=6]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-idle-01.png" type="Texture" id=7]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-idle-03.png" type="Texture" id=8]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-air-attack2-00.png" type="Texture" id=9]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-air-attack2-02.png" type="Texture" id=10]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-die-01.png" type="Texture" id=11]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-die-03.png" type="Texture" id=12]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-die-05.png" type="Texture" id=13]
[ext_resource path="res://Assets/Pixelate.gdshader" type="Shader" id=14]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-die-06.png" type="Texture" id=15]
[ext_resource path="res://Assets/light.png" type="Texture" id=16]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-attack3-05.png" type="Texture" id=17]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-attack3-02.png" type="Texture" id=18]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-attack3-04.png" type="Texture" id=19]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-crnr-grb-02.png" type="Texture" id=20]
[ext_resource path="res://Assets/vignette.png" type="Texture" id=21]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-attack3-01.png" type="Texture" id=22]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-air-attack1-03.png" type="Texture" id=23]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-jump-01.png" type="Texture" id=24]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-jump-02.png" type="Texture" id=25]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-die-00.png" type="Texture" id=26]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-jump-03.png" type="Texture" id=27]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-air-attack2-01.png" type="Texture" id=28]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-die-04.png" type="Texture" id=29]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-run-03.png" type="Texture" id=30]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-air-attack1-01.png" type="Texture" id=31]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-die-02.png" type="Texture" id=32]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-fall-01.png" type="Texture" id=33]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-run-00.png" type="Texture" id=34]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-run-01.png" type="Texture" id=35]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-fall-00.png" type="Texture" id=36]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-crnr-grb-01.png" type="Texture" id=37]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-run-02.png" type="Texture" id=38]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-crnr-grb-00.png" type="Texture" id=39]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-crnr-grb-03.png" type="Texture" id=40]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-hurt-02.png" type="Texture" id=41]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-hurt-00.png" type="Texture" id=42]
[ext_resource path="res://Assets/Adventurer-1.5/Individual Sprites/adventurer-hurt-01.png" type="Texture" id=43]
[ext_resource path="res://Scripts/PinBubble.gd" type="Script" id=44]
[ext_resource path="res://Assets/Pin/5.png" type="Texture" id=45]
[ext_resource path="res://Assets/Pin/4.png" type="Texture" id=46]
[ext_resource path="res://Assets/Pin/1.png" type="Texture" id=47]
[ext_resource path="res://Assets/Pin/3.png" type="Texture" id=48]
[ext_resource path="res://Assets/Pin/2.png" type="Texture" id=49]
[ext_resource path="res://Scripts/Light2D.gd" type="Script" id=50]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 6.405 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2.74373, 0.502222 )

[sub_resource type="ShaderMaterial" id=3]

[sub_resource type="CircleShape2D" id=4]
radius = 12.4285

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 2.78331, 5.91453 )

[sub_resource type="CircleShape2D" id=17]
radius = 196.15

[sub_resource type="CapsuleShape2D" id=7]
radius = 83.8127
height = 93.0343

[sub_resource type="CircleShape2D" id=8]
radius = 5.00242

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 30 ) ],
"loop": false,
"name": "Dash",
"speed": 5.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 6 ), ExtResource( 23 ) ],
"loop": false,
"name": "Attack0",
"speed": 10.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 27 ) ],
"loop": false,
"name": "Jump",
"speed": 10.0
}, {
"frames": [ ExtResource( 30 ) ],
"loop": true,
"name": "FallU",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 17 ) ],
"loop": false,
"name": "Attack2",
"speed": 10.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 35 ), ExtResource( 38 ), ExtResource( 30 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "Run",
"speed": 7.0
}, {
"frames": [ ExtResource( 42 ), ExtResource( 43 ), ExtResource( 41 ) ],
"loop": false,
"name": "Hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 39 ), ExtResource( 37 ), ExtResource( 20 ), ExtResource( 40 ) ],
"loop": false,
"name": "Wall",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 28 ), ExtResource( 10 ) ],
"loop": false,
"name": "Attack1",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 8 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 11 ), ExtResource( 32 ), ExtResource( 12 ), ExtResource( 29 ), ExtResource( 13 ), ExtResource( 15 ) ],
"loop": false,
"name": "Death",
"speed": 7.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 33 ) ],
"loop": true,
"name": "Fall",
"speed": 7.0
} ]

[sub_resource type="Animation" id=10]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0251386, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="ShaderMaterial" id=11]
shader = ExtResource( 14 )
shader_param/pixel_size = 2

[sub_resource type="CanvasItemMaterial" id=12]
light_mode = 1

[sub_resource type="StreamTexture" id=13]

[sub_resource type="CanvasItemMaterial" id=14]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=15]
light_mode = 1

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ ExtResource( 47 ), ExtResource( 49 ), ExtResource( 48 ), ExtResource( 46 ), ExtResource( 45 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
collision_layer = 128
collision_mask = 3
script = ExtResource( 1 )

[node name="MainCollission" type="CollisionShape2D" parent="."]
position = Vector2( 0.0393715, -6.4917 )
shape = SubResource( 1 )

[node name="PlatformArea" type="Area2D" parent="."]
position = Vector2( 0.0393715, -0.0206995 )
collision_layer = 0
collision_mask = 2

[node name="PlatformCollision" type="CollisionShape2D" parent="PlatformArea"]
position = Vector2( -0.0331917, -0.630643 )
shape = SubResource( 2 )

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2( 3.7968, -2.50677 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
modulate = Color( 1, 1, 1, 0.180392 )
material = SubResource( 3 )
position = Vector2( 2.19685, -5.07626 )
shape = SubResource( 4 )

[node name="HitArea" type="Area2D" parent="."]
position = Vector2( 0.0393715, -0.0206995 )
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 0.0346562, -6.06213 )
shape = SubResource( 5 )

[node name="SpawnerTriggerArea" type="Area2D" parent="."]
position = Vector2( 4.09444, 0.27118 )
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerTriggerArea"]
modulate = Color( 0.0588235, 0.160784, 0.156863, 1 )
position = Vector2( -4.3053, -7.29007 )
shape = SubResource( 17 )

[node name="SpawnerPreventArea" type="Area2D" parent="."]
position = Vector2( 4.09444, 0.27118 )
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerPreventArea"]
position = Vector2( -4.3053, -7.29007 )
rotation = 1.5708
shape = SubResource( 7 )

[node name="InterractArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="InterractArea"]
position = Vector2( 0.14031, -6.21607 )
shape = SubResource( 8 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 0.0393715, -0.0206995 )
cast_to = Vector2( 0, 16 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
show_behind_parent = true
position = Vector2( 0.373149, -7.83678 )
scale = Vector2( 0.424803, 0.433518 )
frames = SubResource( 9 )
animation = "Idle"
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 10 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0.178413, -5.92441 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 16 )
mode = 2
shadow_enabled = true
shadow_gradient_length = 50.0
shadow_filter = 3
shadow_filter_smooth = 64.0
script = ExtResource( 50 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -7.11696 )
current = true
zoom = Vector2( 0.25, 0.25 )

[node name="Pixelate" type="ColorRect" parent="Camera2D"]
visible = false
material = SubResource( 11 )
margin_left = -129.576
margin_top = -77.9072
margin_right = 131.424
margin_bottom = 77.0928
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthIndicator" type="TextureRect" parent="Camera2D"]
modulate = Color( 1, 1, 1, 0.32549 )
material = SubResource( 12 )
margin_left = -130.0
margin_top = -72.5933
margin_right = 131.0
margin_bottom = 82.4067
rect_pivot_offset = Vector2( -221.661, 38.8454 )
texture = SubResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vignette" type="Sprite" parent="Camera2D/HealthIndicator"]
light_mask = 16384
material = SubResource( 14 )
position = Vector2( 132.585, 78.3246 )
scale = Vector2( 0.139994, 0.144806 )
texture = ExtResource( 21 )

[node name="PinBubble" type="AnimatedSprite" parent="."]
modulate = Color( 5, 5, 5, 1 )
material = SubResource( 15 )
position = Vector2( 0.561863, -17.8441 )
scale = Vector2( 0.5, 0.5 )
z_index = 4096
frames = SubResource( 16 )
script = ExtResource( 44 )
range_max = 600

[node name="PinBubbleNPC" type="AnimatedSprite" parent="."]
modulate = Color( 5, 5, 5, 1 )
material = SubResource( 15 )
position = Vector2( 0.46822, -17.8441 )
scale = Vector2( 0.5, 0.5 )
z_index = 4096
frames = SubResource( 16 )
script = ExtResource( 44 )
range_max = 600

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
